# bear

./: .travis.yml  CMakeLists.txt  README.md  bearConfig.cmake.in
examples/: CMakeLists.txt
examples/EKF_3D/: CMakeLists.txt
examples/EKF_3D/include/: EKF.h
examples/EKF_3D/src/: main.cpp
examples/ekf_visual-inertial/: CMakeLists.txt  README.md
examples/ekf_visual-inertial/include/: EKF.h
examples/ekf_visual-inertial/src/: main.cpp
examples/extended_KF_3D/: CMakeLists.txt
examples/extended_KF_3D/include/: EKF.h
examples/extended_KF_3D/src/: EKF.cpp  main.cpp
examples/kf_3d-movement/: CMakeLists.txt  README.md
examples/kf_3d-movement/include/: KF3DPosition.h  matplotlibcpp.h
examples/kf_3d-movement/src/: KF3DPosition.cpp  main.cpp
examples/kf_bboxes/: CMakeLists.txt  README.md
examples/kf_bboxes/include/: BoundingBox.h  KFBBoxes.h
examples/kf_bboxes/src/: KFBBoxes.cpp  main.cpp
examples/kf_simple/: CMakeLists.txt  main.cpp
examples/particle_filter/: CMakeLists.txt  example_2d.cpp  example_3d.cpp
include/: ExtendedKalmanFilter.h  ExtendedKalmanFilter.inl
include/bear/: ExtendedKalmanFilter.h  ExtendedKalmanFilter.inl  KalmanFilter.h  KalmanFilter.inl  KalmanFilterSimple.h  KalmanFilterSimple.inl  ParticleFilterCPU.h  ParticleFilterCPU.inl
src/: KalmanFilter.cpp
